<?xml version="0.0.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>tracking</name>
 <version>0.0.0</version>
 <description>Multi Modal Object Fusion and Tracking</description>
 <maintainer email="phillip.karle@tum.de">Phillip Karle</maintainer>
 <license>Apache License 2.0</license>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>delphi_esr_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tum_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>delphi_esr_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tum_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
